# wiki-webscraper

./: .gitignore  README.md  pyproject.toml
infra/: app.py
infra/stacks/: crawl_state_stack.py
src/wiki_scraper/: bloom.py  config.py  crawler.py  fetcher.py  frontier.py  main.py  parser.py  robots.py  storage.py  url_utils.py
tests/: test_bloom.py  test_fetcher.py  test_frontier.py  test_parser.py  test_storage.py  test_url_utils.py
