[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "boto3>=1.35",
    "lxml>=5.0",
    "mmh3>=4.0",
    "bitarray>=2.8",
]

[project.optional-dependencies]
infra = ["aws-cdk-lib>=2.100", "constructs>=10"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "moto[dynamodb]>=5", "aioresponses>=0.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
